dynamic order minimum delivery

--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -148,11 +148,14 @@
                     <form action="{{ url_for('checkout.summary') }}" method="post">
 
                         <p class="mbr-fonts-style display-5">Select Order Type<br>
-                            <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-6">Minimum $20 Delivery</h3>
                             <br>
-                            <input type="radio" id="delivery" name="order_type" value="Delivery" checked> Delivery
+                            <input type="radio" id="takeout" name="order_type" value="takeout" checked> Takeout
                             <br>
-                            <input type="radio" id="takeout" name="order_type" value="takeout"> Takeout
+                            {% if delivery_minimum is true %}
+                            <input type="radio" id="delivery" name="order_type" value="Delivery"> 
+                            {% else %}
+                            Must meet $20 minimum for delivery
+                            {% endif %}
                             <br>
                         </p>
 
