--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -151,7 +151,7 @@
                             <br>
                             <input type="radio" id="takeout" name="order_type" value="takeout" checked> Takeout
                             <br>
-                            {% if delivery_minimum == true %}
+                            {% if delivery_minimum == True %}
                             <input type="radio" id="delivery" name="order_type" value="Delivery"> 
                             {% else %}
                             Must meet $20 minimum for delivery
