added delivery label

--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -152,7 +152,7 @@
                             <input type="radio" id="takeout" name="order_type" value="takeout" checked> Takeout
                             <br>
                             {% if delivery_minimum == True %}
-                            <input type="radio" id="delivery" name="order_type" value="Delivery"> 
+                            <input type="radio" id="delivery" name="order_type" value="Delivery"> Delivery
                             {% else %}
                             Must meet $20 minimum for delivery
                             {% endif %}
