--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -139,7 +139,6 @@
                         Items: {% if session['total'] is defined %}{{session['total'][1]}}{% else %}0{% endif %}
                         <br>Total Price: {% if session['total'] is defined %}${{session['total'][0]}}{% else %}Free{% endif %}
                     </h3>
-                    <br>
                 </div>
             </div>
 
@@ -147,8 +146,11 @@
                 <div class="container align-center">
                     <form action="{{ url_for('checkout.summary') }}" method="post">
 
-                        <p class="mbr-fonts-style display-5">Select Order Type<br>
-                            <br>
+                        <p class="mbr-fonts-style display-5">
+                            Select Order Type
+                        </p>
+                        <br>
+                        <p class="mbr-fonts-style display-6">
                             <input type="radio" id="takeout" name="order_type" value="takeout" checked> Takeout
                             <br>
                             {% if delivery_minimum == True %}
