--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -64,12 +64,10 @@
 
                                 <!--test templating adding 
                                 -->
-                                {% for food_dict_item in all_items_dict %}
-                                    {% for value in food_dict_item %}
-                                    <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="{{value['Category']}}">
-                                        <div href="#lb-gallery2-d" data-slide-to="{{ loop.index + 1 }}" data-toggle="modal"><img src="{{ value['Img_URL'] }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">{{ value['Base'] }}</span></div>
-                                    </div>
-                                    {% endfor %}
+                                {% for key, food_dict_item in all_items_dict.items() %}
+                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="{{food_dict_item['Category']}}">
+                                    <div href="#lb-gallery2-d" data-slide-to="{{ loop.index + 1 }}" data-toggle="modal"><img src="{{ food_dict_item['Img_URL'] }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">{{ food_dict_item['Base'] }}</span></div>
+                                </div>
                                 {% endfor %}
 
                                 <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Appetizer">
