--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -137,7 +137,7 @@
 
                                     {% for key, food_dict_item in all_items_dict.items() %}
                                     <!--Item=() is the vairable in the url-->
-                                    <div class="carousel-item"><img src="/thai/menu/static/{{ food_dict_item['Img_URL'] }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='{{key}}', portion='dinner') }}")'></div>
+                                    <div class="carousel-item"><img src="/thai/menu/static/{{ food_dict_item['Img_URL'] }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item={{key}}, portion='dinner') }}")'></div>
                                     {% endfor %}
 
 
