--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -112,12 +112,15 @@
 
                                     {% for key, food_dict_item in all_items_dict.items() %}
                                     <!--Item=() is the vairable in the url-->
-                                    <div class="carousel-item"><img src="/thai/menu/static/{{ food_dict_item['Img_URL'] }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item=key, portion='dinner') }}")'></div>
+                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename=key['Img_URL']) }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item=key, portion='dinner') }}")'></div>
                                     {% endfor %}
+
+
                                     <!--Item=() is the vairable in the url-->
                                     <!--
                                     <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai1-940x528.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Pad_thai_1', portion='dinner') }}")'></div>
                                     -->
+
                                 </div>
 
                                 <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery2-d"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span>
