--- a/nickdima/silk_thai/template/menu/testing.html
+++ b/nickdima/silk_thai/template/menu/testing.html
@@ -1,3 +1,20 @@
+Skip to content
+ 
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ @ncd2dq Sign out
+0
+0 0 ncd2dq/nickdima_site
+ Code  Issues 0  Pull requests 0  Projects 0  Wiki  Insights  Settings
+nickdima_site/nickdima/silk_thai/template/menu/menu.html
+90d05d7  3 hours ago
+@ncd2dq ncd2dq iterate dict
+     
+202 lines (160 sloc)  15.2 KB
 <!DOCTYPE html>
 <html>
 
@@ -188,3 +205,16 @@
 </body>
 
 </html>
+© 2018 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+Press h to open a hovercard with more details.
