--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -56,41 +56,25 @@
                         <div>
                             <div>
 
-                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Main Dish">
-                                    <!--Main Dish-->
+                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Appetizer">
+                                    <div href="#lb-gallery2-d" data-slide-to="0" data-toggle="modal"><img src="/thai/menu/static/assets/images/pad-thai1-940x528.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Pad Thai</span></div>
+                                </div>
+                                <!--
+                                {% for key, food_dict_item in all_items_dict.items() %}
+                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="{{food_dict_item['Category']}}">
+                                    <div href="#lb-gallery2-d" data-slide-to="{{ loop.index - 1}}" data-toggle="modal"><img src="/thai/menu/static/{{ food_dict_item['Img_URL'] }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">{{ food_dict_item['Base'] }}</span></div>
+                                </div>
+                                {% endfor %}
+                                -->
 
+                                <!--Hard coded
+                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Main Dish">
                                     <div href="#lb-gallery2-d" data-slide-to="0" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai1-940x528-800x449.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Pad Thai</span>
                                     </div>
                                 </div>
+                                -->
 
-                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Appetizer">
-                                    <div href="#lb-gallery2-d" data-slide-to="1" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/calamari2-896x504-800x450.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Calamari</span></div>
-                                </div>
-                                <!--Appetizer-->
 
-                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Curries">
-                                    <div href="#lb-gallery2-d" data-slide-to="2" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/yellow-curry1-725x483-725x483.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Yellow Curry</span></div>
-                                </div>
-
-                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Curries">
-                                    <div href="#lb-gallery2-d" data-slide-to="3" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/yellow-curry2-680x965-680x965.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Yellow Curry</span></div>
-                                </div>
-
-                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Main Dish">
-                                    <div href="#lb-gallery2-d" data-slide-to="4" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai2-2000x2000-800x800.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Pad Thai</span></div>
-                                </div>
-
-                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Appetizer">
-                                    <div href="#lb-gallery2-d" data-slide-to="5" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/calamari1-960x640-800x533.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Silk Calamari</span></div>
-                                </div>
-
-                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Noodles">
-                                    <div href="#lb-gallery2-d" data-slide-to="6" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/pad-see-ew-610x458-610x458.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Pad Se Ew</span></div>
-                                </div>
-
-                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Noodles">
-                                    <div href="#lb-gallery2-d" data-slide-to="7" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/drunken-noodle-616x462-616x462.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Drunken Noodle</span></div>
-                                </div>
                             </div>
                         </div>
 
@@ -111,14 +95,16 @@
                             <div class="modal-body">
                                 <!--These are the little dots at the bottom of the large box-->
                                 <ol class="carousel-indicators">
-                                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="0"></li>
-                                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="1"></li>
-                                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="2"></li>
-                                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="3"></li>
-                                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="4"></li>
-                                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="5"></li>
+                                    {% for key, food_dict_item in all_items_dict.items() %}
+                                    {% if loop.last %}
+                                    <li data-app-prevent-settings="" class=" active" data-target="#lb-gallery2-d" data-slide-to="{{ loop.index - 1}}"></li>
+                                    {% else %}
+                                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="{{ loop.index - 1 }}"></li>
+                                    {% endif %}
+                                    {% endfor %}
+                                    <!--
                                     <li data-app-prevent-settings="" data-target="#lb-gallery2-d" class=" active" data-slide-to="6"></li>
-                                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="7"></li>
+                                    -->
                                 </ol>
 
                                 <!--This is the enlarged image that appears-->
@@ -129,24 +115,17 @@
                                 </script>
                                 <div class="carousel-inner">
 
+
+                                    <div class="carousel-item"><img src="/thai/menu/static/assets/images/pad-thai1-940x528.jpg" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("/thai/food/Pad_thai_1/dinner")'></div>
+
+
                                     <!--Item=() is the vairable in the url-->
-                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai1-940x528.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Pad_thai_1', portion='dinner') }}")'></div>
+                                    <!--
+                                    {% for key, food_dict_item in all_items_dict.items() %}
+                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename=food_dict_item['Img_URL']) }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item=key, portion='dinner') }}")'></div>
+                                    {% endfor %}
+                                -->
 
-                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/calamari2-896x504.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Calamari', portion='dinner') }}")'></div>
-
-                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/yellow-curry1-725x483.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Chicken_yellow_curry', portion='dinner') }}")'></div>
-
-                                    <!--Greeen Curry test clicking-->
-                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/yellow-curry2-680x965.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Green_curry', portion='dinner') }}")'></div>
-
-                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai2-2000x2000.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Pad_thai_2', portion='dinner') }}")'></div>
-
-                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/calamari1-960x640.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Silk_calamari', portion='dinner') }}")'></div>
-
-                                    <div class="carousel-item active"><img src="{{ url_for('menu.static', filename='assets/images/pad-see-ew-610x458.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Pad_see_ew', portion='dinner') }}")'></div>
-
-                                    <!--test clicking image in carousel-->
-                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/drunken-noodle-616x462.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Drunken_noodles', portion='dinner') }}")'></div>
                                 </div>
 
                                 <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery2-d"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span>
