menu page testing

--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -95,6 +95,8 @@
                             <div class="modal-body">
                                 <!--These are the little dots at the bottom of the large box-->
                                 <ol class="carousel-indicators">
+                                    <li data-app-prevent-settings="" class=" active" data-target="#lb-gallery2-d" data-slide-to="0"></li>
+                                    <!--
                                     {% for key, food_dict_item in all_items_dict.items() %}
                                     {% if loop.last %}
                                     <li data-app-prevent-settings="" class=" active" data-target="#lb-gallery2-d" data-slide-to="{{ loop.index - 1}}"></li>
@@ -102,6 +104,8 @@
                                     <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="{{ loop.index - 1 }}"></li>
                                     {% endif %}
                                     {% endfor %}
+                                    -->
+
                                     <!--
                                     <li data-app-prevent-settings="" data-target="#lb-gallery2-d" class=" active" data-slide-to="6"></li>
                                     -->
