--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -120,7 +120,7 @@
                                 <div class="carousel-inner">
 
 
-                                    <div class="carousel-item"><img src="/thai/menu/static/assets/images/pad-thai1-940x528.jpg" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("/thai/food/Pad_thai_1/dinner")'></div>
+                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename='/assets/images/pad-thai1-940x528.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("/thai/food/Pad_thai_1/dinner")'></div>
 
 
                                     <!--Item=() is the vairable in the url-->
