--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -56,8 +56,10 @@
                         <div>
                             <div>
 
-                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Appetizer">
-                                    <div href="#lb-gallery2-d" data-slide-to="0" data-toggle="modal"><img src="/thai/menu/static/assets/images/pad-thai1-940x528.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Pad Thai</span></div>
+                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Main Dish">
+                                    <!--Main Dish-->
+                                    <div href="#lb-gallery2-d" data-slide-to="0" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai1-940x528-800x449.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Pad Thai</span>
+                                    </div>
                                 </div>
                                 <!--
                                 {% for key, food_dict_item in all_items_dict.items() %}
@@ -120,7 +122,7 @@
                                 <div class="carousel-inner">
 
 
-                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename='/assets/images/pad-thai1-940x528.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("/thai/food/Pad_thai_1/dinner")'></div>
+                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai1-940x528.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Pad_thai_1', portion='dinner') }}")'></div>
 
 
                                     <!--Item=() is the vairable in the url-->
