--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -56,10 +56,8 @@
                         <div>
                             <div>
 
-                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Main Dish">
-                                    <!--Main Dish-->
-                                    <div href="#lb-gallery2-d" data-slide-to="0" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai1-940x528-800x449.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Pad Thai</span>
-                                    </div>
+                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Curries">
+                                    <div href="#lb-gallery2-d" data-slide-to="2" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/yellow-curry1-725x483-725x483.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Yellow Curry</span></div>
                                 </div>
                                 <!--
                                 {% for key, food_dict_item in all_items_dict.items() %}
@@ -97,7 +95,7 @@
                             <div class="modal-body">
                                 <!--These are the little dots at the bottom of the large box-->
                                 <ol class="carousel-indicators">
-                                    <li data-app-prevent-settings="" class=" active" data-target="#lb-gallery2-d" data-slide-to="0"></li>
+                                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="0"></li>
                                     <!--
                                     {% for key, food_dict_item in all_items_dict.items() %}
                                     {% if loop.last %}
@@ -121,8 +119,7 @@
                                 </script>
                                 <div class="carousel-inner">
 
-
-                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai1-940x528.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Pad_thai_1', portion='dinner') }}")'></div>
+                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai1-940x528.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Pad_thai_1', portion='dinner') }}")'></div>  
 
 
                                     <!--Item=() is the vairable in the url-->
