added active back in

--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -104,7 +104,7 @@
                                 <!--These are the little dots at the bottom of the large box-->
                                 <ol class="carousel-indicators">
                                     <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="0"></li>
-                                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="1"></li>
+                                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" class="active" data-slide-to="1"></li>
                                     <!--
                                     {% for key, food_dict_item in all_items_dict.items() %}
                                     {% if loop.last %}
