--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -79,6 +79,10 @@
                                     <div href="#lb-gallery2-d" data-slide-to="4" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai2-2000x2000-800x800.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Pad Thai</span></div>
                                 </div>
 
+                                <div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Noodles">
+                                    <div href="#lb-gallery2-d" data-slide-to="7" data-toggle="modal"><img src="{{ url_for('menu.static', filename='assets/images/drunken-noodle-616x462-616x462.jpg') }}" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Drunken Noodle</span></div>
+                                </div>
+
                                 <!--Appetizer-->
 
                                 <!--
@@ -122,6 +126,7 @@
                                     <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="2"></li>
                                     <li data-app-prevent-settings="" data-target="#lb-gallery2-d" class=" active" data-slide-to="3"></li>
                                     <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="4"></li>
+                                    <li data-app-prevent-settings="" data-target="#lb-gallery2-d" data-slide-to="5"></li>
                                     <!--
                                     {% for key, food_dict_item in all_items_dict.items() %}
                                     {% if loop.last %}
@@ -156,6 +161,7 @@
 
                                     <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/pad-thai2-2000x2000.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Pad_thai_2', portion='dinner') }}")'></div>
 
+                                    <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/drunken-noodle-616x462.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Drunken_noodles', portion='dinner') }}")'></div>
 
                                     <!--Item=() is the vairable in the url-->
                                     <!--
