--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -99,11 +99,17 @@
                                             extra_rice_elm = '0';
                                         }
 
+                                        //debug
+                                        console.log(topping_elm, extra_elm, extra_rice_elm);
+
                                           let topping = parseExtraPrice(topping_elm);
                                           let extra = parseExtraPrice(extra_elm);
                                           let extra_rice = parseExtraPrice(extra_rice_elm);
 
                                           let cur_price = document.getElementById('the_price');
+
+                                          //more debug
+                                          console.log(topping, extra, extra_rice, cur_price);
 
                                           let additional = topping + extra + (extra_rice * 2);
 
